--- a/languages/es.json
+++ b/languages/es.json
@@ -99,7 +99,7 @@
         "add": "agregar",
         "producto": "Producto",
         "titulo": "Titulo",
-        "cantidad": "Cantidad",
+        "cantidad": "Cant.",
         "precio": "Precio",
         "subtotal": "Subtotal",
         "vaciar": "Vaciar carrito",
