--- a/languages/es.json
+++ b/languages/es.json
@@ -3,6 +3,7 @@
         "services": "servicios",
         "testimonials": "testimonios",
         "about": "acerca",
+        "products": "productos",
         "contact": "contacto"
     },
     "home": {
@@ -66,7 +67,7 @@
         "about": "acerca",
         "testimonials": "testimonios",
         "contact": "contacto",
-        "all": "2024 Todos los derechos reservados"
+        "all": "Hecho con ❤️ usando HTML, CSS y JavaScript."
     },
     "form": {
         "title": "Comunicate con nosotros",
@@ -94,7 +95,6 @@
         "third-paragraph": "Priorizamos la higiene, el confort y las últimas tendencias en el arte de uñas para brindarte una experiencia que supera expectativas. Entra a un espacio donde la belleza y el cuidado se unen para crear el look perfecto."
     },
     "carrito" :{
-        "atras": "volver",
         "vacio": "Tu carrito está vacío.",
         "add": "agregar",
         "producto": "Producto",
